# VP_Prakt

./: CMakeLists.txt
include/: config.hh  db_manip.hh  struct.hh  struct_methods.hh  structs.hh  user_interact.hh
libDB/: CMakeLists.txt
libDB/include/: config.hh  libDB.hh
libDB/src/: libDB.cc
src/: db_manip.cc  main.cc  user_interact.cc
